# csad2425ki404piskurskyisv15

./: README.md
.github/workflows/: ci.yml
clientSide/: CMakeLists.txt
clientSide/include/: constants.h
clientSide/src/: clientSide.cpp
reports/: АПКС_КІ-404_Піскурський_task1.docx
serverSide/: CMakeLists.txt  serverSide.ino
serverSide/include/: constants.h
